# israellopezdeveloper.github.io

./: .eslintignore  .eslintrc.back  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  .prettierrc.json  .techs  CLAUDE.md  CV.es.json  CV.json  LICENSE  Makefile  README.en.md  README.es.md  README.md  TODO.md  commands.txt  cv.aux  cv.tex  eslint.config.js  eslint.config.mjs  koala_education.blend  koala_education.blend1  koala_main.blend  koala_main.blend1  koala_work.blend  koala_work.blend1  metadata.json  next-sitemap.config.js  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  sveltex.config.js  tsconfig.eslint.json  (+2 more)
scripts/: .flake8  .pre-commit-config.yaml  .pre-commit-config.yml  CV.base.en.json  CV.json  coso.json  cv.en.json  pyproject.toml  requirements.txt
scripts/src/editor/: __main__.py  app_desktop.back  app_desktop.py
scripts/src/editor/actions/: __init__.py  factory.py
scripts/src/editor/app/: main.py  window.py
scripts/src/editor/dialogs/: acreditation_dialog.py  base_dialog.py  base_dir_dialog.py  bio_dialog.py  complementary_dialog.py  file_dialog.py  internationalize_dialog.py  language_dialog.py  link_dialog.py  project_dialog.py  translate_dialog.py  university_dialog.py  work_dialog.py
scripts/src/editor/models/: __init__.py  defaults.py  schema.py
scripts/src/editor/services/: __init__.py  internationalize.py  io.py  summarize.py  translate.py
scripts/src/editor/summarizer/: __main__.py  summarizer.py
scripts/src/editor/tabs/: educations_tab.py  (+3 more)
(+175 files in other folders)
