[tool.poetry]
name = "editor"
version = "0.1.0"
description = "Script de traduccción de mi CV"
authors = ["Israel Lopez <israel.lopez.developer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
transformers = ">=4.44"
sentencepiece = "*"
accelerate = "*"
sacremoses = "*"
beautifulsoup4 = "*"
protobuf = "^6.31.1"
pyqt6-webengine = "^6.9.0"
pyside6 = "^6.9.1"
jsonschema = "^4.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
line-length = 100

[tool.poetry.scripts]
traduce = "editor.traductor.__main__:main"
resume = "editor.summarizer.__main__:main"
editor = "editor.__main__:main"
